--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,123 @@
-*.tar.gz
-tests/output
-*DS_Store
-*.swp
-changelogs/.plugin-cache.yaml
+# Byte-compiled / optimized / DLL files
 __pycache__/
+*.py[cod]
+*.pyo
+*.pyc
+*.pyd
+*.so
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Virtual environments
+venv/
+.venv/
+env/
+.env/
+ENV/
+env.bak/
+venv.bak/
 /**venv
-/.vscode
-html/
+/**/.venv
+
+# Testing
+.tox
+.coverage
+.pytest_cache/
+.mypy_cache/
+htmlcov/
+.hypothesis/
+.ruff_cache
+
+# Ansible specific
+*.retry
 ansible.cfg
+.ansible
+.ansible_galaxy
+
+# Documentation
+html/
+docs/_build/
+*.epub
+*.pdf
+
+# Molecule testing
+tests/output
+
+# Package managers and changelogs
+changelogs/.plugin-cache.yaml
+
+# Development tools
 Vagrantfile
 .vagrant/
-.tox
-.ruff_cache
+tests/container-env
+
+# IDEs and editors
+.vscode/
+.idea/
+*.iml
+*.swp
+*~
+
+# Operating system files
+# macOS
+.DS_Store
+*DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+# Temporary files and logs
+*.tmp
+*.log
+*.pid
+*.seed
+*.pid.lock
+
+# Archives
+*.tar.gz
+*.zip
+*.7z
+
+# AI/ML tools (your custom additions)
+.clinerules
+.continue
