fix: ansible 12 porting updates
As of Ansible 12 - new strict type checking and boolean validations were
implmeneted. In order to work with this and maintain backwards
compatability - this required significant effort to ensure we were not
hitting any boolean clause issues surrounding strings, null/none, and
actual boolean vars.

--- a/roles/falcon_configure/tasks/main.yml
+++ b/roles/falcon_configure/tasks/main.yml
@@ -2,7 +2,7 @@
 # tasks file for falcon_configure
 - name: API block
   when:
-    - falcon_client_id and falcon_client_secret
+    - (falcon_client_id | default('', true)) | length > 0 and (falcon_client_secret | default('', true)) | length > 0
     - falcon_option_set
     - not falcon_cid
   block:
@@ -27,7 +27,7 @@
 
 - name: Remove AID block
   when:
-    - falcon_remove_aid
+    - falcon_remove_aid is defined and falcon_remove_aid | bool
     - not any_option_set
     - ansible_facts['os_family'] != "Windows"
   become: true
