--- a/roles/falcon_uninstall/tasks/remove_host_pretasks.yml
+++ b/roles/falcon_uninstall/tasks/remove_host_pretasks.yml
@@ -19,9 +19,7 @@
     - name: "CrowdStrike Falcon | Assert AID found (Linux)"
       ansible.builtin.assert:
         that:
-          - falcon_uninstall_linux_aid is defined
-          - falcon_uninstall_linux_aid is not none
-          - falcon_uninstall_linux_aid | length > 0
+          - falcon_uninstall_linux_aid | default('', true) | length > 0
         fail_msg: "AID was not found!"
         success_msg: "Found AID."
 
@@ -61,9 +59,7 @@
     - name: "CrowdStrike Falcon | Assert AID found (Windows)"
       ansible.builtin.assert:
         that:
-          - falcon_uninstall_windows_aid is defined
-          - falcon_uninstall_windows_aid is not none
-          - falcon_uninstall_windows_aid | length > 0
+          - falcon_uninstall_windows_aid | default('', true) | length > 0
         fail_msg: "AID was not found!"
         success_msg: "Found AID."
 
@@ -95,9 +91,7 @@
     - name: "CrowdStrike Falcon | Assert AID found (macOS)"
       ansible.builtin.assert:
         that:
-          - falcon_uninstall_mac_aid is defined
-          - falcon_uninstall_mac_aid is not none
-          - falcon_uninstall_mac_aid | length > 0
+          - falcon_uninstall_mac_aid | default('', true) | length > 0
         fail_msg: "AID was not found!"
         success_msg: "Found AID."
 
