--- a/roles/falcon_configure/tasks/win_configure.yml
+++ b/roles/falcon_configure/tasks/win_configure.yml
@@ -6,7 +6,7 @@
         state: "{{ falcon_service_state | default('started') }}"
         start_mode: auto
       when:
-        - falcon_cid is defined and falcon_cid is not none and falcon_cid | length > 0
+        - falcon_cid | default('', true) | length > 0
 
     - name: CrowdStrike Falcon Installer | Remove any AID Key
       ansible.windows.win_regedit:
