--- a/roles/falcon_install/tasks/preinstall.yml
+++ b/roles/falcon_install/tasks/preinstall.yml
@@ -94,7 +94,7 @@
     mode: "0755"
   when:
     - ansible_facts['system'] == "Linux" or ansible_facts['system'] == "Darwin"
-    - falcon_install_tmp_dir is defined
+    - falcon_install_tmp_dir | default('', true) | length > 0
   register: falcon_install_temp_directory
   changed_when: no
 
@@ -104,6 +104,7 @@
     state: directory
   when:
     - ansible_facts['os_family'] == "Windows"
+    - falcon_windows_tmp_dir | default('', true) | length > 0
   changed_when: no
 
 - name: CrowdStrike Falcon | Validate Temporary install directory (Windows)
