--- a/roles/falcon_uninstall/tasks/win_uninstall.yml
+++ b/roles/falcon_uninstall/tasks/win_uninstall.yml
@@ -15,7 +15,7 @@
     arguments: '/uninstall /quiet {{ falcon_windows_uninstall_args }}'
   register: falcon_win_sensor_uninstall
   when:
-    - falcon_win_sensor_cache.files is defined and falcon_win_sensor_cache.files is not none and falcon_win_sensor_cache.files | length > 0
+    - falcon_win_sensor_cache.files | default('', true) | length > 0
     - ansible_facts['os_family'] == "Windows"
 
 - name: CrowdStrike Falcon | Wait for Falcon Sensor to be removed (Windows)
