fix: ansible 12 porting updates (#624)
* fix: ansible 12 porting updates

As of Ansible 12 - new strict type checking and boolean validations were
implmeneted. In order to work with this and maintain backwards
compatability - this required significant effort to ensure we were not
hitting any boolean clause issues surrounding strings, null/none, and
actual boolean vars.

* fix: opted for cleaner any_var | default('', true) | length > 0

* chore: split to make more readable

--- a/roles/falcon_configure/tasks/win_configure.yml
+++ b/roles/falcon_configure/tasks/win_configure.yml
@@ -6,7 +6,7 @@
         state: "{{ falcon_service_state | default('started') }}"
         start_mode: auto
       when:
-        - falcon_cid
+        - falcon_cid | default('', true) | length > 0
 
     - name: CrowdStrike Falcon Installer | Remove any AID Key
       ansible.windows.win_regedit:
@@ -17,4 +17,4 @@
         - 'HKLM:\SYSTEM\CrowdStrike\{9b03c1d9-3138-44ed-9fae-d9f4c034b88d}\{16e0423f-7058-48c9-a204-725362b67639}\Default\AG'
         - 'HKLM:\SYSTEM\CurrentControlSet\Services\CSAgent\Sim\AG'
       when:
-        - falcon_remove_aid
+        - falcon_remove_aid is defined and falcon_remove_aid | bool
