--- a/roles/falcon_install/tasks/url.yml
+++ b/roles/falcon_install/tasks/url.yml
@@ -8,8 +8,8 @@
     url_password: "{{ falcon_download_url_password | default(omit) }}"
     mode: 0640
   when:
-    - falcon_download_url
-    - falcon_install_temp_directory
+    - falcon_download_url | default('', true) | length > 0
+    - falcon_install_temp_directory | default('', true) | length > 0
   register: falcon_sensor_download
   retries: "{{ falcon_retries }}"
   delay: "{{ falcon_delay }}"
