--- a/roles/falcon_install/tasks/win_url.yml
+++ b/roles/falcon_install/tasks/win_url.yml
@@ -6,8 +6,8 @@
     url_username: "{{ falcon_download_url_username | default(omit) }}"
     url_password: "{{ falcon_download_url_password | default(omit) }}"
   when:
-    - falcon_download_url
-    - falcon_windows_tmp_dir_stat.stat.path
+    - falcon_download_url | default('', true) | length > 0
+    - falcon_windows_tmp_dir_stat.stat.path | default('', true) | length > 0
   register: falcon_sensor_download
   retries: "{{ falcon_retries }}"
   delay: "{{ falcon_delay }}"
