--- a/roles/falcon_uninstall/tasks/main.yml
+++ b/roles/falcon_uninstall/tasks/main.yml
@@ -6,8 +6,9 @@
 
 - name: API block
   when:
-    - falcon_client_id and falcon_client_secret
-    - falcon_sensor_installed
+    - falcon_client_id | default('', true) | length > 0
+    - falcon_client_secret | default('', true) | length > 0
+    - falcon_sensor_installed | bool
   block:
     - ansible.builtin.include_role:
         name: falcon_install
@@ -17,8 +18,8 @@
 - name: Remove/Hide Host pretasks
   when:
     - falcon.auth is defined
-    - falcon_remove_host
-    - falcon_sensor_installed
+    - falcon_remove_host | bool
+    - falcon_sensor_installed | bool
   block:
     - ansible.builtin.include_tasks: remove_host_pretasks.yml
       # noqa name[missing]
@@ -46,7 +47,7 @@
 - name: Hide host
   when:
     - falcon.auth is defined
-    - falcon_remove_host
+    - falcon_remove_host | bool
     - falcon_uninstall_remove_aid is defined
   block:
     - ansible.builtin.include_tasks: hide_host.yml
