--- a/.pylintrc
+++ b/.pylintrc
@@ -89,7 +89,7 @@ recursive=no
 
 # When enabled, pylint would attempt to guess common misconfiguration and emit
 # user-friendly hints instead of false-positive error messages.
-suggestion-mode=yes
+# Note: suggestion-mode is deprecated in newer pylint versions
 
 # Allow loading of arbitrary C extensions. Extensions are imported into the
 # active Python interpreter and may run arbitrary code.
