--- a/galaxy.yml
+++ b/galaxy.yml
@@ -71,7 +71,6 @@ issues: https://github.com/CrowdStrike/ansible_collection_crowdstrike/issues
 # uses 'fnmatch' to match the files or directories. Some directories and files like 'galaxy.yml', '*.pyc', '*.retry',
 # and '.git' are always filtered
 build_ignore:
-  - '.devcontainer'
-  - '.git*'
-  - '.pre-commit-config.yaml'
   - 'tox.ini'
+  - '.*'
+  - 'molecule'
