--- a/roles/falcon_uninstall/tasks/win_uninstall.yml
+++ b/roles/falcon_uninstall/tasks/win_uninstall.yml
@@ -3,8 +3,8 @@
   ansible.windows.win_find:
     paths: C:\ProgramData\Package Cache
     patterns: ^((WindowsSensor|FalconSensor_Windows).*\.)(exe)$
-    recurse: yes
-    use_regex: yes
+    recurse: true
+    use_regex: true
   register: falcon_win_sensor_cache
 
 - name: CrowdStrike Falcon | Remove Falcon Sensor (Windows)
@@ -12,7 +12,7 @@
     path: "{{ falcon_win_sensor_cache.files[0].path }}"
     state: absent
     creates_service: csfalconservice
-    arguments: '/uninstall /quiet {{ falcon_windows_uninstall_args }}'
+    arguments: "/uninstall /quiet {{ falcon_windows_uninstall_args }}"
   register: falcon_win_sensor_uninstall
   when:
     - falcon_win_sensor_cache.files | default('', true) | length > 0
@@ -22,4 +22,4 @@
   ansible.windows.win_wait_for:
     path: C:\Windows\System32\drivers\CrowdStrike
     state: absent
-  when: falcon_win_sensor_uninstall.changed  # noqa: no-handler
+  when: falcon_win_sensor_uninstall.changed # noqa: no-handler
