--- a/roles/falcon_configure/tasks/remove_aid.yml
+++ b/roles/falcon_configure/tasks/remove_aid.yml
@@ -1,5 +1,5 @@
 ---
 - name: CrowdStrike Falcon | Remove Falcon Agent ID (AID)
   crowdstrike.falcon.falconctl:
-    aid: yes
+    aid: true
     state: absent
