--- a/roles/falcon_install/tasks/install.yml
+++ b/roles/falcon_install/tasks/install.yml
@@ -1,7 +1,7 @@
 ---
 - name: CrowdStrike Falcon | Set default sensor name
   ansible.builtin.set_fact:
-    falcon_sensor_pkg: 'falcon-sensor'
+    falcon_sensor_pkg: "falcon-sensor"
   when:
     - falcon_sensor_pkg is not defined
 
@@ -9,8 +9,8 @@
   ansible.builtin.copy:
     src: "{{ item }}"
     dest: "{{ falcon_install_temp_directory.path }}/{{ item }}"
-    mode: 0640
-  changed_when: no
+    mode: "0640"
+  changed_when: false
   loop: "{{ falcon_gpg_keys }}"
   when:
     - falcon_gpg_key_check | bool
@@ -18,8 +18,8 @@
 - name: CrowdStrike Falcon | Import CrowdStrike Falcon RPM GPG key from files
   ansible.builtin.rpm_key:
     state: present
-    key: '{{ falcon_install_temp_directory.path }}/{{ item }}'
-  changed_when: no
+    key: "{{ falcon_install_temp_directory.path }}/{{ item }}"
+  changed_when: false
   loop: "{{ falcon_gpg_keys }}"
   when:
     - falcon_gpg_key_check | bool
@@ -27,9 +27,9 @@
 
 - name: CrowdStrike Falcon | Import CrowdStrike Falcon APT GPG key from file
   ansible.builtin.apt_key:
-    file: '{{ falcon_install_temp_directory.path }}/{{ latest_gpg_key }}'
+    file: "{{ falcon_install_temp_directory.path }}/{{ latest_gpg_key }}"
     state: present
-  changed_when: no
+  changed_when: false
   when:
     - falcon_gpg_key_check | bool
     - ansible_facts['pkg_mgr'] in dpkg_packagers
@@ -60,7 +60,7 @@
   ansible.builtin.file:
     path: "{{ falcon_install_tmp_dir }}"
     state: absent
-  changed_when: no
+  changed_when: false
 
 - name: CrowdStrike Falcon | Remove Falcon Sensor Package (local file)
   ansible.builtin.file:
@@ -69,4 +69,4 @@
   when:
     - falcon_install_method == "file"
     - falcon_localfile_cleanup | bool
-  changed_when: no
+  changed_when: false
