--- a/roles/falcon_uninstall/tasks/remove_host_pretasks.yml
+++ b/roles/falcon_uninstall/tasks/remove_host_pretasks.yml
@@ -37,8 +37,8 @@
         name: AG
       register: falcon_uninstall_windows_aid_stat
       loop:
-        - 'HKLM:\SYSTEM\CrowdStrike\{9b03c1d9-3138-44ed-9fae-d9f4c034b88d}\{16e0423f-7058-48c9-a204-725362b67639}\Default'
-        - 'HKLM:\SYSTEM\CurrentControlSet\Services\CSAgent\Sim'
+        - "HKLM:\\SYSTEM\\CrowdStrike\\{9b03c1d9-3138-44ed-9fae-d9f4c034b88d}\\{16e0423f-7058-48c9-a204-725362b67639}\\Default"
+        - "HKLM:\\SYSTEM\\CurrentControlSet\\Services\\CSAgent\\Sim"
 
     - name: "CrowdStrike Falcon | Set unique value (Windows)"
       ansible.builtin.set_fact:
