--- a/tests/config.yml
+++ b/tests/config.yml
@@ -1,3 +1,4 @@
+---
 # Sample ansible-test configuration file for collections.
 # Support for this feature was first added in ansible-core 2.12.
 # Use of this file is optional.
@@ -7,7 +8,7 @@ modules:
   # Configuration for modules/module_utils.
   # These settings do not apply to other content in the collection.
 
-  python_requires: '>=3.6'
+  python_requires: ">=3.6"
   # Python versions supported by modules/module_utils.
   # This setting is required.
   #
